# diploma-master

./: .gitignore  Makefile  README.md  TASK.md  VISUALIZATION_MAP.md  main.before-kernel-example-20260428.tex  main.before-linear-kernel-note-20260428.tex  main.before-theory-merge-20260427.tex  main.before-theory10ms-merge-20260428.tex  main.before-theory2-merge-20260427.tex  main.tex  pipeline-theory.md  pyproject.toml
data/genfoam/near_wall_steam_layer/: thermal_timeseries.csv
figures/: alpha_eff_check_table.tex  diagnostic_metrics_table.tex  energy_balance_table.tex  genfoam_regime_metrics.tex  pipeline_report.tex  pipeline_v2_report.tex  pipeline_v3_report.tex  pipeline_v4_report.tex  rho_noise_floor_table.tex
figures/archive_unused_2026-04-28/: alpha_eff_check_table.tex
notebooks/: 01_tvel_water_pipeline.ipynb  02_tvel_materials_pipeline_v2.ipynb  03_tvel_high_temperature_pipeline_v3.ipynb
scripts/: export_pipeline_figures.py  extract_genfoam_log_timeseries.py  generate_physics_figures.py  make_fig8_energy_partition.py  make_fig_fuel_pin_anatomy.py  make_fig_memory_convolution.py  make_fig_poc_gantt.py  make_fig_poc_setup.py  make_fig_thermal_radial_relaxation.py
src/thesis_modeling/: __init__.py  cantera_equilibrium.py  fallback_physics.py  genfoam_io.py  genfoam_post.py  material_screening.py  pipeline_export.py  pipeline_v2_export.py  pipeline_v3_export.py  pipeline_v4_export.py  plots.py  reports.py  scenarios.py  validation.py  wall_coupled_water.py  water_state.py
tests/: test_modeling_smoke.py
(+7 files in other folders)
