[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis-modeling"
version = "0.1.0"
description = "Compact modeling pipeline for TVEL heating and water response."
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
chemistry = ["cantera"]
notebooks = ["jupyter", "nbformat"]
test = ["nbclient"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
